Adding Kafka to the project